Src/Main/MetaDslx.Compiler.Antlr4/Languages/MetaGenerator/Syntax/InternalSyntax/MetaGeneratorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\balaz\AppData\Local\Temp\hnnegzvh.djj\MetaGeneratorParser.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MetaDslx.Languages.MetaGenerator.Syntax.InternalSyntax {
using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class MetaGeneratorParser : Parser {
	public const int
		KNamespace=1, KGenerator=2, KUsing=3, KConfiguration=4, KProperties=5, 
		KTemplate=6, KFunction=7, KExtern=8, KReturn=9, KSwitch=10, KCase=11, 
		KType=12, KVoid=13, KEnd=14, KFor=15, KForEach=16, KIn=17, KIf=18, KElse=19, 
		KLoop=20, KHasLoop=21, KWhere=22, KOrderBy=23, KDescending=24, KSeparator=25, 
		KNull=26, KTrue=27, KFalse=28, KBool=29, KByte=30, KChar=31, KDecimal=32, 
		KDouble=33, KFloat=34, KInt=35, KLong=36, KObject=37, KSByte=38, KShort=39, 
		KString=40, KUInt=41, KULong=42, KUShort=43, KThis=44, KNew=45, KIs=46, 
		KAs=47, KTypeof=48, KDefault=49, TSemicolon=50, TColon=51, TDot=52, TComma=53, 
		TAssign=54, TAssignPlus=55, TAssignMinus=56, TAssignAsterisk=57, TAssignSlash=58, 
		TAssignPercent=59, TAssignAmp=60, TAssignPipe=61, TAssignHat=62, TAssignLeftShift=63, 
		TAssignRightShift=64, TOpenParenthesis=65, TCloseParenthesis=66, TOpenBracket=67, 
		TCloseBracket=68, TOpenBrace=69, TCloseBrace=70, TEquals=71, TNotEquals=72, 
		TArrow=73, TSingleArrow=74, TLessThan=75, TGreaterThan=76, TLessThanOrEquals=77, 
		TGreaterThanOrEquals=78, TQuestion=79, TPlus=80, TMinus=81, TExclamation=82, 
		TTilde=83, TAsterisk=84, TSlash=85, TPercent=86, TPlusPlus=87, TMinusMinus=88, 
		TColonColon=89, TAmp=90, THat=91, TPipe=92, TAnd=93, TXor=94, TOr=95, 
		TQuestionQuestion=96, IdentifierNormal=97, IntegerLiteral=98, DecimalLiteral=99, 
		ScientificLiteral=100, DateTimeOffsetLiteral=101, DateTimeLiteral=102, 
		DateLiteral=103, TimeLiteral=104, CharLiteral=105, RegularStringLiteral=106, 
		GuidLiteral=107, UTF8BOM=108, WHITESPACE=109, CRLF=110, LINEBREAK=111, 
		LINE_COMMENT=112, COMMENT=113, DoubleQuoteVerbatimStringLiteral=114, TH_CRLF=115, 
		TH_LINEBREAK=116, TH_TOpenParenthesis=117, TH_TCloseParenthesis=118, KEndTemplate=119, 
		TemplateLineControl=120, TemplateOutput=121, TemplateCrLf=122, TemplateLineBreak=123, 
		TemplateStatementStart=124, TemplateStatementEnd=125, TS_TOpenBracket=126, 
		TS_TCloseBracket=127, DoubleQuoteVerbatimStringLiteralStart=128;
	public const int
		RULE_main = 0, RULE_namespaceDeclaration = 1, RULE_generatorDeclaration = 2, 
		RULE_usingDeclaration = 3, RULE_configDeclaration = 4, RULE_configProperty = 5, 
		RULE_methodDeclaration = 6, RULE_externFunctionDeclaration = 7, RULE_functionDeclaration = 8, 
		RULE_functionSignature = 9, RULE_paramList = 10, RULE_parameter = 11, 
		RULE_body = 12, RULE_statement = 13, RULE_singleStatement = 14, RULE_singleStatementSemicolon = 15, 
		RULE_variableDeclarationStatement = 16, RULE_returnStatement = 17, RULE_expressionStatement = 18, 
		RULE_ifStatement = 19, RULE_elseIfStatementBody = 20, RULE_ifStatementElseBody = 21, 
		RULE_ifStatementBegin = 22, RULE_elseIfStatement = 23, RULE_ifStatementElse = 24, 
		RULE_ifStatementEnd = 25, RULE_loopStatement = 26, RULE_loopStatementBegin = 27, 
		RULE_loopStatementEnd = 28, RULE_loopChain = 29, RULE_loopChainItem = 30, 
		RULE_loopChainExpression = 31, RULE_loopWhereExpression = 32, RULE_loopRunExpression = 33, 
		RULE_separatorStatement = 34, RULE_switchStatement = 35, RULE_switchStatementBegin = 36, 
		RULE_switchStatementEnd = 37, RULE_switchBranchStatement = 38, RULE_switchBranchHeadStatement = 39, 
		RULE_switchCaseOrTypeIsHeadStatement = 40, RULE_switchCaseHeadStatement = 41, 
		RULE_switchTypeIsHeadStatement = 42, RULE_switchTypeAsHeadStatement = 43, 
		RULE_switchDefaultStatement = 44, RULE_switchDefaultHeadStatement = 45, 
		RULE_templateDeclaration = 46, RULE_templateSignature = 47, RULE_templateBody = 48, 
		RULE_templateContentLine = 49, RULE_templateContent = 50, RULE_templateOutput = 51, 
		RULE_templateLineEnd = 52, RULE_templateStatementStartEnd = 53, RULE_templateStatement = 54, 
		RULE_typeArgumentList = 55, RULE_predefinedType = 56, RULE_typeReferenceList = 57, 
		RULE_typeReference = 58, RULE_arrayType = 59, RULE_arrayItemType = 60, 
		RULE_nullableType = 61, RULE_nullableItemType = 62, RULE_genericType = 63, 
		RULE_simpleType = 64, RULE_voidType = 65, RULE_returnType = 66, RULE_expressionList = 67, 
		RULE_variableReference = 68, RULE_rankSpecifiers = 69, RULE_rankSpecifier = 70, 
		RULE_unboundTypeName = 71, RULE_genericDimensionItem = 72, RULE_genericDimensionSpecifier = 73, 
		RULE_anonymousFunctionSignature = 74, RULE_explicitParameter = 75, RULE_implicitParameter = 76, 
		RULE_expression = 77, RULE_qualifiedName = 78, RULE_identifierList = 79, 
		RULE_identifier = 80, RULE_literal = 81, RULE_nullLiteral = 82, RULE_booleanLiteral = 83, 
		RULE_numberLiteral = 84, RULE_integerLiteral = 85, RULE_decimalLiteral = 86, 
		RULE_scientificLiteral = 87, RULE_dateOrTimeLiteral = 88, RULE_dateTimeOffsetLiteral = 89, 
		RULE_dateTimeLiteral = 90, RULE_dateLiteral = 91, RULE_timeLiteral = 92, 
		RULE_charLiteral = 93, RULE_stringLiteral = 94, RULE_guidLiteral = 95;
	public static readonly string[] ruleNames = {
		"main", "namespaceDeclaration", "generatorDeclaration", "usingDeclaration", 
		"configDeclaration", "configProperty", "methodDeclaration", "externFunctionDeclaration", 
		"functionDeclaration", "functionSignature", "paramList", "parameter", 
		"body", "statement", "singleStatement", "singleStatementSemicolon", "variableDeclarationStatement", 
		"returnStatement", "expressionStatement", "ifStatement", "elseIfStatementBody", 
		"ifStatementElseBody", "ifStatementBegin", "elseIfStatement", "ifStatementElse", 
		"ifStatementEnd", "loopStatement", "loopStatementBegin", "loopStatementEnd", 
		"loopChain", "loopChainItem", "loopChainExpression", "loopWhereExpression", 
		"loopRunExpression", "separatorStatement", "switchStatement", "switchStatementBegin", 
		"switchStatementEnd", "switchBranchStatement", "switchBranchHeadStatement", 
		"switchCaseOrTypeIsHeadStatement", "switchCaseHeadStatement", "switchTypeIsHeadStatement", 
		"switchTypeAsHeadStatement", "switchDefaultStatement", "switchDefaultHeadStatement", 
		"templateDeclaration", "templateSignature", "templateBody", "templateContentLine", 
		"templateContent", "templateOutput", "templateLineEnd", "templateStatementStartEnd", 
		"templateStatement", "typeArgumentList", "predefinedType", "typeReferenceList", 
		"typeReference", "arrayType", "arrayItemType", "nullableType", "nullableItemType", 
		"genericType", "simpleType", "voidType", "returnType", "expressionList", 
		"variableReference", "rankSpecifiers", "rankSpecifier", "unboundTypeName", 
		"genericDimensionItem", "genericDimensionSpecifier", "anonymousFunctionSignature", 
		"explicitParameter", "implicitParameter", "expression", "qualifiedName", 
		"identifierList", "identifier", "literal", "nullLiteral", "booleanLiteral", 
		"numberLiteral", "integerLiteral", "decimalLiteral", "scientificLiteral", 
		"dateOrTimeLiteral", "dateTimeOffsetLiteral", "dateTimeLiteral", "dateLiteral", 
		"timeLiteral", "charLiteral", "stringLiteral", "guidLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'generator'", "'using'", "'configuration'", "'properties'", 
		"'template'", "'function'", "'extern'", "'return'", "'switch'", "'case'", 
		"'type'", "'void'", "'end'", "'for'", "'foreach'", "'in'", "'if'", "'else'", 
		"'loop'", "'hasloop'", "'where'", "'orderby'", "'descending'", "'separator'", 
		"'null'", "'true'", "'false'", null, "'byte'", "'char'", "'decimal'", 
		"'double'", "'float'", "'int'", "'long'", "'object'", "'sbyte'", "'short'", 
		"'string'", "'uint'", "'ulong'", "'ushort'", "'this'", "'new'", "'is'", 
		"'as'", "'typeof'", "'default'", "';'", "':'", "'.'", "','", "'='", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", 
		"'('", "')'", null, "']'", "'{'", "'}'", "'=='", "'!='", "'=>'", "'->'", 
		"'<'", "'>'", "'<='", "'>='", "'?'", "'+'", "'-'", "'!'", "'~'", null, 
		"'/'", "'%'", "'++'", "'--'", "'::'", "'&'", "'^'", "'|'", "'&&'", "'^^'", 
		"'||'", "'??'", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "'\"'", null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'@\"'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KNamespace", "KGenerator", "KUsing", "KConfiguration", "KProperties", 
		"KTemplate", "KFunction", "KExtern", "KReturn", "KSwitch", "KCase", "KType", 
		"KVoid", "KEnd", "KFor", "KForEach", "KIn", "KIf", "KElse", "KLoop", "KHasLoop", 
		"KWhere", "KOrderBy", "KDescending", "KSeparator", "KNull", "KTrue", "KFalse", 
		"KBool", "KByte", "KChar", "KDecimal", "KDouble", "KFloat", "KInt", "KLong", 
		"KObject", "KSByte", "KShort", "KString", "KUInt", "KULong", "KUShort", 
		"KThis", "KNew", "KIs", "KAs", "KTypeof", "KDefault", "TSemicolon", "TColon", 
		"TDot", "TComma", "TAssign", "TAssignPlus", "TAssignMinus", "TAssignAsterisk", 
		"TAssignSlash", "TAssignPercent", "TAssignAmp", "TAssignPipe", "TAssignHat", 
		"TAssignLeftShift", "TAssignRightShift", "TOpenParenthesis", "TCloseParenthesis", 
		"TOpenBracket", "TCloseBracket", "TOpenBrace", "TCloseBrace", "TEquals", 
		"TNotEquals", "TArrow", "TSingleArrow", "TLessThan", "TGreaterThan", "TLessThanOrEquals", 
		"TGreaterThanOrEquals", "TQuestion", "TPlus", "TMinus", "TExclamation", 
		"TTilde", "TAsterisk", "TSlash", "TPercent", "TPlusPlus", "TMinusMinus", 
		"TColonColon", "TAmp", "THat", "TPipe", "TAnd", "TXor", "TOr", "TQuestionQuestion", 
		"IdentifierNormal", "IntegerLiteral", "DecimalLiteral", "ScientificLiteral", 
		"DateTimeOffsetLiteral", "DateTimeLiteral", "DateLiteral", "TimeLiteral", 
		"CharLiteral", "RegularStringLiteral", "GuidLiteral", "UTF8BOM", "WHITESPACE", 
		"CRLF", "LINEBREAK", "LINE_COMMENT", "COMMENT", "DoubleQuoteVerbatimStringLiteral", 
		"TH_CRLF", "TH_LINEBREAK", "TH_TOpenParenthesis", "TH_TCloseParenthesis", 
		"KEndTemplate", "TemplateLineControl", "TemplateOutput", "TemplateCrLf", 
		"TemplateLineBreak", "TemplateStatementStart", "TemplateStatementEnd", 
		"TS_TOpenBracket", "TS_TCloseBracket", "DoubleQuoteVerbatimStringLiteralStart"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MetaGeneratorParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MetaGeneratorParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class MainContext : ParserRuleContext {
		public NamespaceDeclarationContext namespaceDeclaration() {
			return GetRuleContext<NamespaceDeclarationContext>(0);
		}
		public GeneratorDeclarationContext generatorDeclaration() {
			return GetRuleContext<GeneratorDeclarationContext>(0);
		}
		public UsingDeclarationContext[] usingDeclaration() {
			return GetRuleContexts<UsingDeclarationContext>();
		}
		public UsingDeclarationContext usingDeclaration(int i) {
			return GetRuleContext<UsingDeclarationContext>(i);
		}
		public ConfigDeclarationContext configDeclaration() {
			return GetRuleContext<ConfigDeclarationContext>(0);
		}
		public MethodDeclarationContext[] methodDeclaration() {
			return GetRuleContexts<MethodDeclarationContext>();
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return GetRuleContext<MethodDeclarationContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMetaGeneratorParserListener typedListener = listener as IMetaGeneratorParserListener;
			if (typedListener != null) typedListener.EnterMain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMetaGeneratorParserListener typedListener = listener as IMetaGeneratorParserListener;
			if (typedListener != null) typedListener.ExitMain(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaGeneratorParserVisitor<TResult> typedVisitor = visitor as IMetaGeneratorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 192; namespaceDeclaration();
			State = 193; generatorDeclaration();
			State = 197;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==KUsing) {
				{
				{
				State = 194; usingDeclaration();
				}
				}
				State = 199;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 201;
			_la = TokenStream.La(1);
			if (_la==KProperties) {
				{
				State = 200; configDeclaration();
				}
			}

			State = 206;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KTemplate) | (1L << KFunction) | (1L << KExtern))) != 0)) {
				{
				{
				State = 203; methodDeclaration();
				}
				}
				State = 208;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceDeclarationContext : ParserRuleContext {
		public ITerminalNode KNamespace() { return GetToken(MetaGeneratorParser.KNamespace, 0); }
		public QualifiedNameContext qualifiedName() {
			return GetRuleContext<QualifiedNameContext>(0);
		}
		public ITerminalNode TSemicolon() { return GetToken(MetaGeneratorParser.TSemicolon, 0); }
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMetaGeneratorParserListener typedListener = listener as IMetaGeneratorParserListener;
			if (typedListener != null) typedListener.EnterNamespaceDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMetaGeneratorParserListener typedListener = listener as IMetaGeneratorParserListener;
			if (typedListener != null) typedListener.ExitNamespaceDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaGeneratorParserVisitor<TResult> typedVisitor = visitor as IMetaGeneratorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceDeclarationContext namespaceDeclaration() {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_namespaceDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 209; Match(KNamespace);
			State = 210; qualifiedName();
			State = 211; Match(TSemicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GeneratorDeclarationContext : ParserRuleContext {
		public ITerminalNode KGenerator() { return GetToken(MetaGeneratorParser.KGenerator, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode TSemicolon() { return GetToken(MetaGeneratorParser.TSemicolon, 0); }
		public ITerminalNode KFor() { return GetToken(MetaGeneratorParser.KFor, 0); }
		public TypeReferenceContext typeReference() {
			return GetRuleContext<TypeReferenceContext>(0);
		}
		public GeneratorDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_generatorDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMetaGeneratorParserListener typedListener = listener as IMetaGeneratorParserListener;
			if (typedListener != null) typedListener.EnterGeneratorDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMetaGeneratorParserListener typedListener = listener as IMetaGeneratorParserListener;
			if (typedListener != null) typedListener.ExitGeneratorDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaGeneratorParserVisitor<TResult> typedVisitor = visitor as IMetaGeneratorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGeneratorDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GeneratorDeclarationContext generatorDeclaration() {
		GeneratorDeclarationContext _localctx = new GeneratorDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_generatorDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 213; Match(KGenerator);
			State = 214; identifier();
			{
			State = 215; Match(KFor);
			State = 216; typeReference();
			}
			State = 218; Match(TSemicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
